--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
                 <div class="logo-img ps-lg-5">
 
                     <a class="navbar-brand" href="#">
-                      <img src="Images/logo.png" alt="" class="img-fluid  rounded-3" width="120px">
+<!--                       <img src="Images/logo.png" alt="" class="img-fluid  rounded-3" width="120px"> -->
+                      <img src="Images/NavLogo.png" alt="" class="img-fluid  logo1" width="120px" >
+                      <img src="Images/NavLogoWhite.png" alt="" class="img-fluid logo2" width="120px">
                     </a>
                 </div>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -546,7 +548,7 @@ Main street will never look the same again!</p>
                 recommended!"</h1>
                 <div class="footer-carousel pt-4 d-flex align-content-center">
                     <div class="person-img ">
-                        <img src="Images/footer.png" class="rounded-5">
+                        <img src="Images/footer.png" class="rounded-5" height="50px" width="50px">
                     </div>
                     <div class="person-info px-3">
 
