--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navbar  -->
     <header>
-        <nav class="navbar navbar-expand-lg   nav-main">
+        <nav class="navbar navbar-expand-lg nav-main fixed-top">
             <div class="container-fluid">
                 <div class="logo-img ps-lg-5">
 
