--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <!-- Main Title -->
 
-<section class="container-fluid px-0 px-lg-5  ">
+<section class="container-fluid px-0 px-lg-5 pt-5">
 
     <div class="container main-title text-center pt-lg-5 px-0 px-lg-5  ">
         <h1 class="pt-5 pb-3 fw-bold ms-lg-5  ">Own a piece of Main Street: Join the <br><span class="auto-typers"></span></h1>
