--- a/index.html
+++ b/index.html
@@ -14,16 +14,15 @@
 <link rel="mask-icon" href="favicon/safari-pinned-tab.svg" color="#5bbad5">
 <meta name="msapplication-TileColor" content="#da532c">
 <meta name="theme-color" content="#ffffff">
-    <script src="   https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
   <body>
 
     <!-- Navbar  -->
     <header>
-        <nav class="navbar navbar-expand-lg nav-main fixed-top">
+        <nav class="navbar navbar-expand-lg nav-main fixed-top pb-4">
             <div class="container-fluid">
                 <div class="logo-img ps-lg-5">
-
                     <a class="navbar-brand" href="#">
 <!--                       <img src="Images/logo.png" alt="" class="img-fluid  rounded-3" width="120px"> -->
                       <img src="Images/NavLogo.png" alt="" class="img-fluid  logo1" width="120px" >
@@ -617,7 +616,7 @@ Main street will never look the same again!</p>
 <!-- Footer Navbar -->
 
 <div class="container-fluid pt-5 mt-lg-5 px-lg-0  px-xl-5 footer-nav me-lg-5">
-    <nav class="navbar navbar-expand-lg  nav-main px-lg-5 px-xl-5">
+    <nav class="navbar navbar-expand-lg px-lg-5 px-xl-5">
         <div class="container-fluid px-lg-0 me-lg-5">
             <div class="nav-uls">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end pt-3 pe-3 fw-normal text-light">
