--- a/index.html
+++ b/index.html
@@ -21,11 +21,12 @@
    <div id="pre-loader1" ></div>
     <!-- Navbar  -->
     <header>
-        <nav class="navbar navbar-expand-lg   nav-main">
+        <nav class="navbar navbar-expand-lg nav-main fixed-top pb-4 ">
             <div class="container-fluid">
                 <div class="logo-img ps-lg-5">
                     <a class="navbar-brand" href="#">
-                      <img src="Images/logo.png" alt="" class="img-fluid  rounded-3" width="120px">
+                        <img src="Images/NavLogo.png" alt="" class="img-fluid  logo1" width="120px" >
+                        <img src="Images/NavLogoWhite.png" alt="" class="img-fluid logo2" width="120px">
                     </a>
                 </div>
               <button class="navbar-toggler bg-white" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -51,10 +52,8 @@
 
                           <div class="moders pt-2 pt-lg-1 ps-4 ps-lg-0">
 
-                            <button class="btn btn-dark darkmoding fw-bold rounded-5" title="Change Theme"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-moon " viewBox="0 0 16 16">
-                              <path d="M6 .278a.77.77 0 0 1 .08.858 7.2 7.2 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277q.792-.001 1.533-.16a.79.79 0 0 1 .81.316.73.73 0 0 1-.031.893A8.35 8.35 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.75.75 0 0 1 6 .278M4.858 1.311A7.27 7.27 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.32 7.32 0 0 0 5.205-2.162q-.506.063-1.029.063c-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286"/>
-                            </svg></button>
-                          </div>
+                            <button class="btn btn-dark darkmoding fw-bold rounded-5" title="Change Mode"><svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-120q-150 0-255-105T120-480q0-150 105-255t255-105q14 0 27.5 1t26.5 3q-41 29-65.5 75.5T444-660q0 90 63 153t153 63q55 0 101-24.5t75-65.5q2 13 3 26.5t1 27.5q0 150-105 255T480-120Z"/></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e8eaed"><path d="M480-280q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Z"/></svg></button
                         
                       </ul>
                 </div>
@@ -66,7 +65,7 @@
 
     <!-- Main Title -->
 
-<section class="container-fluid px-0 px-lg-5  ">
+    <section class="container-fluid px-0 px-lg-5 pt-5">
 
     <div class="container main-title text-center pt-lg-5 px-0 px-lg-0 px-xl-0 pe-xl-5 ">
         <h1 class="pt-5 pb-3 fw-bold ms-lg-5 pe-md-5 px-lg-0 txt-gradient">Own a piece of Main Street: Join the <br><span class="auto-typers"></span></h1>
@@ -665,7 +664,13 @@ Main street will never look the same again!</p>
 </div>
 </footer>
 
+<script>
+    var loader = document.getElementById("pre-loader1");
 
+window.addEventListener("load", function () {
+  loader.style.display = "none";
+});
+</script>
 
 <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
 <script src="script.js"></script>
