--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@ Main street will never look the same again!</p>
 <!-- Footer Navbar -->
 
 <div class="container-fluid pt-5 mt-lg-5 px-lg-0  px-xl-5 footer-nav me-lg-5">
-    <nav class="navbar navbar-expand-lg  nav-main px-lg-5 px-xl-5">
+    <nav class="navbar navbar-expand-lg  nav-main nav-ftr px-lg-5 px-xl-5">
         <div class="container-fluid px-lg-0 me-lg-5">
             <div class="nav-uls">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0 justify-content-end pt-3 pe-3 fw-normal text-light">
