--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                         </li>
                         <div class="btn-nav me-lg-5 pt-lg-1 pt-2 pe-lg-3 ps-lg-3 ">
                   
-                            <button class="btn btn-outline-dark rounded-pill  fw-semibold btn-login1" type="submit" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Tooltip on bottom">Login</button>
+                            <button class="btn btn-outline-dark rounded-pill  fw-semibold btn-login1" type="submit" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Tooltip on bottom"><span>Login</span></button>
                             <button class="btn btn-dark btn-dark2 rounded-pill ms-lg-3 btn-signup mt-3 mt-lg-0" type="submit">Sign Up</button>
                           </div>
 
